Closed Bug 1739266 Opened 4 years ago Closed 4 years ago

sdpSemantics is not appearing in about:webrtc

Categories

(Core :: WebRTC, defect, P2)

defect

Tracking

()

RESOLVED FIXED
96 Branch
Tracking Status
firefox96 --- fixed

People

(Reporter: ng, Assigned: ng)

References

(Blocks 1 open bug)

Details

Attachments

(2 files)

sdpSemantics is always "Not provided" in about:webrtc

Assignee: nobody → na-g
Status: NEW → ASSIGNED
Severity: -- → S3
Priority: -- → P2
Attachment #9249145 - Attachment description: Bug 1739266 - do not delete the sdpSemantics field before it can be passed to about:webrtc;r?jib → Bug 1739266 - P1 - do not delete the sdpSemantics field before it can be passed to about:webrtc;r?jib

This fixes a bracketing error that was causing the sdpSemantics not to be recorded when no ICE configuration was supplied.

Depends on D130316

Pushed by na-g@nostrum.com: https://hg.mozilla.org/integration/autoland/rev/38b51e92e793 P1 - do not delete the sdpSemantics field before it can be passed to about:webrtc;r=jib https://hg.mozilla.org/integration/autoland/rev/8f592ec46c18 P2 - record sdpSemantics even when no ICE servers have been supplied;r=mjf
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 96 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: