Bug 1739266 - P2 - record sdpSemantics even when no ICE servers have been supplied;r=mjf

This fixes a bracketing error that was causing the sdpSemantics not to be recorded when no ICE configuration was supplied.

Depends on D130316

Differential Revision: https://phabricator.services.mozilla.com/D130522